tests/negative/test_expr_deref_ptr_cn.orb
fnc main() () {
    sym x:i32;
    sym p:(ptr cn) (ptr &x);
    * p;
};